tests/snapshots/assets__check_file@unit-show-show-set.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/show/show-set.typ
snapshot_kind: text
---
#show heading.where(
  level: 2,
): set heading(
  numbering: (
    ..n,
  ) => [#n.pos().at(1).],
)
