tests/snapshots/assets__check_file@unit-show-show-set.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/show/show-set.typ
snapshot_kind: text
---
#show heading.where(level: 2): set heading(numbering: (..n) => [#n.pos().at(1).])
